[package]
name = "nvidia-attestation-runner"
version = "0.1.0"
edition = "2021"
rust-version = "1.76"
description = "Unofficial Rust runner and policy layer for NVIDIA GPU attestation evidence."
license = "MIT OR Apache-2.0"
repository = "https://github.com/cyntrisec/nvidia-attestation-runner"
readme = "README.md"
keywords = ["nvidia", "gpu", "attestation", "tee", "confidential"]
categories = ["authentication", "cryptography", "command-line-utilities"]

[dependencies]
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "1"
